--- a/lambda-inspector/pom.xml
+++ b/lambda-inspector/pom.xml
@@ -26,11 +26,11 @@
 			<artifactId>ea-agent-loader</artifactId>
 			<version>1.0.0</version>
 		</dependency>
-		<dependency>
-			<groupId>org.ow2.asm</groupId>
-			<artifactId>asm-debug-all</artifactId>
-			<version>5.1</version>
-		</dependency>
+		<!-- <dependency> -->
+		<!-- <groupId>org.ow2.asm</groupId> -->
+		<!-- <artifactId>asm-debug-all</artifactId> -->
+		<!-- <version>5.1</version> -->
+		<!-- </dependency> -->
 	</dependencies>
 	<build>
 		<plugins>
