--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,17 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<com.umlet.nature.enabled>true</com.umlet.nature.enabled>
 	</properties>
+	
+	<distributionManagement>
+		<repository>
+			<id>mvnzone</id>
+			<url>https://repo.mvnzone.net/repo</url>
+		</repository>
+		<snapshotRepository>
+			<id>mvnzone</id>
+			<url>https://repo.mvnzone.net/repo</url>
+		</snapshotRepository>
+	</distributionManagement>
 
 	<dependencies>
 		<dependency>
@@ -27,9 +38,9 @@
 			<version>1.0.0</version>
 		</dependency>
 		<dependency>
-		<groupId>org.ow2.asm</groupId>
-		<artifactId>asm-debug-all</artifactId>
-		<version>5.1</version>
+			<groupId>org.ow2.asm</groupId>
+			<artifactId>asm-debug-all</artifactId>
+			<version>5.1</version>
 		</dependency>
 	</dependencies>
 	<build>
@@ -43,6 +54,19 @@
 					<source>1.8</source>
 					<target>1.8</target>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>3.0.1</version>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<goals>
+							<goal>jar-no-fork</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
