--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,6 @@ language: java
 jdk:
   - oraclejdk8
 script: "mvn deploy --settings src/travis/settings.xml" 
-
+cache:
+  directories:
+  - $HOME/.m2
